--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="about-img">
 
-            <img src="./img/WhatsApp Image 2024-10-26 at 12.46.12_bc46d003.jpg" alt="" style="width: 500px; ">
+            <img src="./img/WhatsApp Image 2024-10-26 at 12.46.12_bc46d003.png" alt="" style="width: 500px; ">
 
         </div>
 
@@ -125,7 +125,7 @@
                                 During my time at Keshava Reddy EM School, I focused on both academic and personal development, earning a GPA of 9.2 out of 10. My high school education emphasized a strong foundation in core subjects, which equipped me with critical thinking skills and a disciplined approach to learning. This experience helped shape my commitment to academic excellence and prepared me for the challenges ahead in my educational journey."</p>
 
                         </div>
-                <div class="timeline-box">
+                    <div class="timeline-box">
 
                         <div class="timeline-content">
         
@@ -187,20 +187,20 @@
 
     </section>
     <center>
-        <section id="Projects" style="background-color: darkblue;">
+        <section id="Projects" style="background-color: #081b29;">
             <div id="blog" class="dark_bg blog-area section-padding">
                 <center>
                     <h2 class="section-title wow flipInX" data-wow-delay="0.4s">My <span>Projects</span></h2>
                 </center>
-              <div class="container" style="background-color: darkblue;">
-                <div class="row" style="background-color: darkblue;">
+              <div class="container" style="background-color: #081b29">
+                <div class="row" style="background-color: #081b29;">
                   <div class="col-lg-4 col-md-4 col-xs-12">
                     <div class="single_blog wow fadeInLeft">
                       <div class="blog-thumb">
-                        <div class="blog-image" style="background-color: darkblue;">
+                        <div class="blog-image" style="background-color: #081b29;">
                           <a href="#"><img src="img/projectfile.jpg" alt="Email Spam Classification Project" class="img-responsive" /></a>
                         </div>
-                        <div class="blog-info" style="background-color: darkblue;">
+                        <div class="blog-info" style="background-color: #081b29;">
                           <a href="#"><h4 style="color: aliceblue;">Email Spam Classification</h4></a>
                           <small><i class="fa fa-clock-o" style="color: aliceblue;"></i>July 31, 2024</small>
                           <span style="color: aliceblue;">| Design</span>
