--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="about-img">
 
-            <img src="./img/WhatsApp Image 2024-10-26 at 12.46.12_bc46d003.png" alt="" style="width: 500px; ">
+            <img src="./img/WhatsApp Image 2024-10-26 at 12.46.12_bc46d003.jpg" alt="" style="width: 400px; ">
 
         </div>
 
