--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
 
             <div class="timeline-coloum">
 
-                <h2 class="tm">Education</h2>
+                <center>
+                    <h2 class="tm">Education</h2>
+                </center>
 
                 <div class="timeline-box">
 
@@ -187,7 +189,7 @@
 
     </section>
     <center>
-        <section id="Projects" style="background-color: #081b29;">
+        <section id="Projects" style="background-color: #e9edf0;">
             <div id="blog" class="dark_bg blog-area section-padding">
                 <center>
                     <h2 class="section-title wow flipInX" data-wow-delay="0.4s">My <span>Projects</span></h2>
@@ -202,8 +204,8 @@
                         </div>
                         <div class="blog-info" style="background-color: #081b29;">
                           <a href="#"><h4 style="color: aliceblue;">Email Spam Classification</h4></a>
-                          <small><i class="fa fa-clock-o" style="color: aliceblue;"></i>July 31, 2024</small>
-                          <span style="color: aliceblue;">| Design</span>
+                          <small><i class="fa fa-clock-o" style="color: rgb(48, 139, 22);"></i></small>
+                          <span style="color: aliceblue;">Design</span>
                           <p style="color: aliceblue;">Developed a Python-based email spam classification model using Natural Language Processing and machine learning algorithms, achieving high accuracy in detecting spam through feature extraction and model evaluation.</p>
                           <a href="#" class="btn blog_btn btn-secondary" >Read More</a>
                         </div>
